@@ -56,7 +56,7 @@
         <!-- slardar -->
         <kaptcha.version>2.3.3</kaptcha.version> <!-- https://github.com/trydofor/kaptcha -->
         <springdoc.version>1.6.7</springdoc.version> <!-- https://github.com/springdoc/springdoc-openapi/releases -->
-        <fastjson.version>1.2.79</fastjson.version> <!-- https://github.com/alibaba/fastjson/releases -->
+        <fastjson.version>2.0.2</fastjson.version> <!-- https://github.com/alibaba/fastjson2/releases -->
         <kryo.version>5.3.0</kryo.version> <!-- https://github.com/EsotericSoftware/kryo/releases -->
         <transmittable.version>2.12.6</transmittable.version> <!-- https://github.com/alibaba/transmittable-thread-local/releases -->
         <bouncycastle.version>1.71</bouncycastle.version> <!-- https://bouncycastle.org/releasenotes.html -->
@@ -77,6 +77,7 @@
             --add-opens=java.base/java.io=ALL-UNNAMED <!-- FastJson -->
             --add-opens=java.base/java.nio=ALL-UNNAMED <!-- Hazelcast -->
             --add-opens=java.base/java.lang=ALL-UNNAMED <!-- Hazelcast -->
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED <!-- FastJson2 -->
             --add-opens=java.base/java.util=ALL-UNNAMED <!-- Boot Collections$EmptySet -->
             --add-opens=java.base/sun.nio.ch=ALL-UNNAMED <!-- Hazelcast -->
             --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED <!-- Hazelcast -->
@@ -232,8 +233,8 @@
                 <version>${kaptcha.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>fastjson</artifactId>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
                 <version>${fastjson.version}</version>
             </dependency>
             <dependency>
@@ -376,6 +377,7 @@
                             <arg>--add-exports=java.base/java.io=ALL-UNNAMED</arg> <!-- FastJson -->
                             <arg>--add-exports=java.base/java.nio=ALL-UNNAMED</arg> <!-- Hazelcast -->
                             <arg>--add-exports=java.base/java.lang=ALL-UNNAMED</arg> <!-- Hazelcast -->
+                            <arg>--add-exports=java.base/java.lang.invoke=ALL-UNNAMED</arg> <!-- FastJson2 -->
                             <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg> <!-- Hazelcast -->
                             <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg> <!-- Hazelcast -->
                             <arg>--add-exports=java.base/sun.security.x509=ALL-UNNAMED</arg> <!-- Boot -->
