@@ -42,6 +42,7 @@ JDK9_ARG='
 --add-modules java.se
 --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
 --add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
 --add-opens=java.base/java.util=ALL-UNNAMED
 --add-opens java.base/java.io=ALL-UNNAMED
 --add-opens java.base/java.nio=ALL-UNNAMED
